--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -7,7 +7,7 @@ section#events
                         .home-title    
                             div
                                 = icon('fas', 'money-bill-alt')
-                                h1 Campanhas
+                                h1 Teste
                             p Escolha sua campanha
                             .icon-box
                                 = icon('fas', 'fire')
