feat: adicionando botão para acessar o link de pagamento e adicionando gem para variavel de ambiente local

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -22,6 +22,12 @@ $letterColor: #ffffff
 @import "./pages/home"
 @import "./pages/pix"
 
+.sorteio-payment-box
+    padding: 10px
+    p   
+        text-align: start
+        font-size: 10pt !important
+
 .container-purchase
     display: flex
     justify-content: center
