--- a/app/views/frontend/public/search_numbers.html.slim
+++ b/app/views/frontend/public/search_numbers.html.slim
@@ -65,24 +65,32 @@
                                      .sorteio-box             
                                           = image_tag lottery.image_url, class: 'img-responsive my-titles-img'
                                           
-                                          .sorteio-content-winner      
-                                              h2 =  lottery.event
-                                              
-                                              p = "Data do Pagamento: " + transaction.created_at.strftime("%d/%m/%Y %H:%M:%S")
-                                              - if transaction.status == "pending"
-                                                  p = "Status: "  + "Aguardando Pagamento"
-                                              - if transaction.status == "expired" 
-                                                  p = "Status: "  + "Pagamento expirado" 
-                                              - if transaction.status == "approved" 
-                                                p = "Status: "  + "Pagamento aprovado"
-                                                - payment =  Payment.find_by(transaction_id: transaction.transaction_id)
-                                                - if !payment.present?
-                                                 p = "Necessário finalizar processamento"
-                                                 = link_to 'Clique Aqui', reprocess_path(member_id: @member.id, lottery_id: transaction.lottery_id, quantity: transaction.quantity, transaction_id: transaction.transaction_id), class: 'btn btn-primary', method: :post
+                                          .sorteio-payment-box      
+                                              p = "Campanha: " + lottery.event
                                               p = "Quantidade: " + transaction.quantity.to_s
-                                              p = "Total: R$" + lottery.price.to_s      
+                                              p = "Valor Total: R$" + lottery.price.to_s      
                                               p = "Id Transação: " + transaction.transaction_id.to_s
-                          
+
+                                              - payment =  Payment.find_by(transaction_id: transaction.transaction_id)
+
+                                              p = "Data do Pagamento: " + transaction.created_at.strftime("%d/%m/%Y %H:%M:%S")
+
+                                              - if transaction.status == "cancelled"
+                                                  p = "Status: "  + "Pagamento Cancelado"
+                                              - if transaction.status == "expired" 
+                                                  p = "Status: "  + "Pagamento Expirado" 
+                                              - if transaction.status == "404"      
+                                                p = "Status: "  + "Erro no Pagamento"  
+                                              - if transaction.status == "pending"
+                                                p = "Status: "  + "Aguardando Pagamento" 
+                                                = link_to 'Acessar Link de Pagamento', '#', class: 'btn btn-primary'
+  
+                                              - if transaction.status == "approved" 
+                                                p = "Status: "  + "Pagamento Aprovado"                       
+                                                - if !payment.present? 
+                                                  / -raise
+                                                  = link_to 'Confirmar Pagamento', reprocess_path(member_id: @member.id, lottery_id: transaction.lottery_id, quantity: transaction.quantity, transaction_id: transaction.transaction_id), class: 'btn btn-primary', method: :post
+  
                           - else 
                             .not-lotteries
                               p Por enquanto não há transações   
@@ -95,4 +103,3 @@
         = link_to "https://wa.me/#{@whatsapp.url}", target: '_blank' do    
             = icon('fab', 'whatsapp') 
             = 'Clique aqui' 
- 
