feat: adicionando forma de recuperar o qrcode

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -16,6 +16,8 @@
 
 $letterColor: #ffffff
 
+
+
 //Pages
 @import "./pages/login"
 @import "./layout"
@@ -24,6 +26,14 @@ $letterColor: #ffffff
 
 .sorteio-payment-box
     padding: 10px
+    a
+        margin: 5px 0
+        display: flex
+        padding: 5px
+        width: 100%
+        align-items: center
+        justify-content: center
+        padding: 10px
     p   
         text-align: start
         font-size: 10pt !important
