--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -247,8 +247,8 @@
         .progress-bar
             background-color: #059f01
 
-.sorteio-box:hover
-    background-color: rgba(6, 159, 1, 0.103)
+// .sorteio-box:hover
+//     background-color: rgba(6, 159, 1, 0.103)
 
 .sorteio-content
     width: 100%
