--- a/app/views/frontend/public/pix_member.html.slim
+++ b/app/views/frontend/public/pix_member.html.slim
@@ -54,7 +54,17 @@ input#member_id(type="hidden" value="#{@member.id}")
             p Acesse o seu aplicativo bancário realize o pagamento e retorne para esta página.
     .member-info
         span O pagamento expira em 10 min
-        #timer 10:00  
+        - current_time = Time.now  
+        - date_string = @expiration_time
+        - other_time = Time.iso8601(date_string)
+        - difference = current_time - other_time 
+        - difference_in_minutes = difference / 60   
+        - hours = difference_in_minutes.to_i
+        - minutes = ((difference_in_minutes - hours) * 60).round  
+        - formatted_time = format("%d:%02d", hours, minutes)
+
+        span O pagamento expira em 10 min
+        #timer = formatted_time 
         h3 QR Code
         span Escanei o QR Code abaixo para efetuar o pagamento
         img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
