--- a/app/views/frontend/public/pix_member.html.slim
+++ b/app/views/frontend/public/pix_member.html.slim
@@ -47,11 +47,11 @@ input#member_id(type="hidden" value="#{@member.id}")
     .not-numbers
         .alert-warning role="alert"
             p = icon('fas', 'exclamation-circle')
-            p Não feche o seu navegador até concluir todo processo de pagamento.
+            p Acesse o seu aplicativo bancário realize o pagamento.
 
         .alert-warning role="alert"
             p = icon('fas', 'exclamation-circle')
-            p Acesse o seu aplicativo bancário realize o pagamento e retorne para esta página.
+            p O link de pagamento estará disponível também ná opção "Meus Títulos"
     .member-info
         - current_time = Time.now  
         - date_string = @expiration_time
