construção da checagem de pagamento em meus títulos (parte 4)

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -16,11 +16,28 @@
 
 $letterColor: #ffffff
 
+
+
 //Pages
 @import "./pages/login"
 @import "./layout"
 @import "./pages/home"
 @import "./pages/pix"
+
+
+.sorteio-payment-box
+    padding: 10px
+    a
+        margin: 5px 0
+        display: flex
+        padding: 5px
+        width: 100%
+        align-items: center
+        justify-content: center
+        padding: 10px
+    p   
+        text-align: start
+        font-size: 10pt !important
 
 .container-purchase
     display: flex
@@ -100,7 +117,6 @@ body
         color: $letterColor
         font-size: 12pt
         margin: 10px
-
 .pagination 
     li > a
         color: black
@@ -139,7 +155,6 @@ body
         h3
             font-weight: bold
             color: $letterColor
-
         ul
             display: flex
             list-style-type: none
@@ -393,4 +408,3 @@ body
     color: white
     text-align: center
     
-
