--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -5,7 +5,6 @@
     justify-content: center
     align-items: center
     position: fixed
-    z-index: 1
     left: 0
     top: 0
     width: 100%
@@ -14,7 +13,7 @@
     background-color: rgb(0,0,0)
     background-color: rgba(0,0,0,0.4)
     padding-top: 60px
-    z-index: 2
+    z-index: 7
 
 
 /* Conteúdo do modal */
@@ -247,8 +246,8 @@
         .progress-bar
             background-color: #059f01
 
-.sorteio-box:hover
-    background-color: rgba(6, 159, 1, 0.103)
+// .sorteio-box:hover
+//     background-color: rgba(6, 159, 1, 0.103)
 
 .sorteio-content
     width: 100%
@@ -549,4 +548,3 @@
     .grid-container 
         grid-template-columns: repeat(2, 1fr)
     
-
