--- a/app/views/frontend/public/search_numbers.html.slim
+++ b/app/views/frontend/public/search_numbers.html.slim
@@ -68,7 +68,7 @@
                                         .sorteio-payment-box
                                           p Campanha: #{lottery.event}
                                           p Quantidade: #{transaction.quantity}
-                                          p Valor Total: R$#{lottery.price}
+                                          p Valor Total: R$#{lottery.price * transaction.quantity}
                                           p Id Transação: #{transaction.transaction_id}
 
                                           - payment = Payment.find_by(transaction_id: transaction.transaction_id)
@@ -90,10 +90,13 @@
                                               - if !payment.present?
                                                 = link_to 'Confirmar Pagamento', reprocess_path(member_id: @member.id, lottery_id: transaction.lottery_id, quantity: transaction.quantity, transaction_id: transaction.transaction_id), method: :post
 
-                                                           
+                           
                           - else 
                             .not-lotteries
                               p Por enquanto não há transações   
+                          - if @transactions.present?
+                            .text-center
+                              = will_paginate @transactions, renderer: ApplicationHelper::LinkRenderer, class: 'pagination pagination-lg', params: params                                 
 .not-numbers
   .alert-warning role="alert"
     p = icon('fas', 'exclamation-circle')
