--- a/app/views/admin/transactions/index.html.slim
+++ b/app/views/admin/transactions/index.html.slim
@@ -38,11 +38,11 @@ h2 Pagamentos
           th.text-center Status
       tbody
         - @collection.order(created_at: :asc).each do |r|
-          tr
+          tr      
             td.text-center = r.transaction_id
             td.text-center = Lottery.find(r.lottery_id).event
             td.text-center = r.quantity
-            td.text-center = r.quantity * Lottery.find(r.lottery_id).price
+            td.text-center = number_to_currency(r.quantity * Lottery.find(r.lottery_id).price, unit: 'R$', precision: 2)
             td.text-center = Member.find(r.member_id).name
             td.text-center = Member.find(r.member_id).phone
             td.text-center = r.created_at.strftime("%d/%m/%Y %H:%M")
