feat: adicionando paginação em comunicados e deixando em ordem

--- a/app/views/frontend/public/comunications.html.slim
+++ b/app/views/frontend/public/comunications.html.slim
@@ -14,6 +14,8 @@
                     .messages-box  
                         h4 = comunication.title + ' - ' + comunication.created_at.strftime("%d/%m/%Y")
                         = raw comunication.content
+            .text-center
+                = will_paginate @comunications, renderer: ApplicationHelper::LinkRenderer, class: 'pagination pagination-lg'
         - else 
             .not-lotteries
                 p Não há nenhum comunicado no momento!
